# swarm-s3-gateway

./: .env.local.example  .env.production.example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
chain-registry-pallet/: Cargo.toml
chain-registry-pallet/src/: lib.rs  mock.rs  pallet.rs  tests.rs  types.rs
common/: Cargo.toml
common/src/: error.rs  ids.rs  lib.rs  types.rs
contracts/common/: Cargo.toml
contracts/common/src/: lib.rs
contracts/s3_bucket_contract/: Cargo.toml
contracts/s3_bucket_contract/src/: lib.rs
contracts/s3_identity_contract/: Cargo.toml
contracts/s3_identity_contract/src/: lib.rs
docs/: private-lifecycle-operator-guide.md
docs/security/: chain-privacy-surface.md  private-encryption-version-rotation.md  trustless-private-access-model.md
gateway/: Cargo.toml
gateway/src/: app-state.rs  app_state.rs  config.rs  contracts_abi.rs  crypto.rs  lib.rs  main.rs  manifest.rs  request_limits.rs  s3_response.rs  s3_runtime.rs  traits.rs
gateway/src/auth/: middleware.rs  mod.rs  registry.rs  sigv4.rs  unwrap.rs
gateway/src/bee/: client.rs  mod.rs  mods.rs
gateway/src/chain/: anchor_client.rs  mod.rs  registry.rs
gateway/src/routes/: create_bucket.rs  delete_bucket.rs  delete_object.rs  get_object.rs  head_object.rs  list_bucket.rs  list_objects_v2.rs  mod.rs  private_object_read.rs  put_object.rs  trustless_ciphertext_gateway.rs
gateway/tests/: identity_handshake.rs  private_bucket_catalog_behavior.rs  private_delete_behavior.rs  private_manifest_privacy.rs  private_put_behavior.rs  private_route_behavior.rs
pallet-s3-contracts/: Cargo.toml
pallet-s3-contracts/src/: lib.rs
scripts/: check_bucket_type_contract_surface.py  check_chain_privacy_surface.py  check_delegation_scope_surface.py  check_docs_secret_safety.py  check_env_templates.py  check_gateway_bucket_type_surface.py  check_gateway_cas_anchor_surface.py  check_gateway_encryption_key_registry_read_surface.py  check_gateway_owner_catalog_cas_surface.py  check_gateway_trustless_bucket_create_route_surface.py  check_gateway_trustless_bucket_create_surface.py  check_gateway_trustless_ciphertext_endpoint_surface.py  check_identity_encryption_key_cli_surface.py  check_identity_encryption_key_registry_surface.py  check_no_silent_dev_signers.sh  check_owner_catalog_fail_closed.py  check_private_encryption_rotation_surface.py  check_request_body_limit_surface.py  check_route_bucket_type_policy_foundation.py  check_sigv4_freshness_surface.py  check_trustless_chain_recipient_key_adapter_surface.py  check_trustless_identity_recipient_resolver_surface.py  check_trustless_local_keystore_file_surface.py  check_trustless_local_proxy_aws_esdk_keyring_surface.py  check_trustless_local_proxy_ciphertext_gateway_boundary_surface.py  check_trustless_local_proxy_cli_surface.py  check_trustless_local_proxy_encryption_boundary_surface.py  check_trustless_local_proxy_execution_coordinator_surface.py  check_trustless_local_proxy_handler_surface.py  check_trustless_local_proxy_http_handler_surface.py  check_trustless_local_proxy_http_mapping_surface.py  check_trustless_local_proxy_keystore_surface.py  check_trustless_local_proxy_manifest_boundary_surface.py  check_trustless_local_proxy_operation_assembly_surface.py  check_trustless_local_proxy_operation_router_surface.py  check_trustless_local_proxy_pipeline_surface.py  check_trustless_local_proxy_preflight_surface.py  check_trustless_local_proxy_recipient_keys_surface.py  check_trustless_local_proxy_reference_model_surface.py  check_trustless_local_proxy_remote_gateway_surface.py  (+18 more)
trustless-proxy/: Cargo.toml  FAILURE_MODES_AND_IMPLEMENTATION_PLAN.md  README.md  package.json  tsconfig.json
trustless-proxy/src/: aws_esdk.rs  chain_recipient_key_adapter.rs  cli.rs  config.rs  config.ts  encryption.rs  execution_coordinator.rs  execution_engine.rs  gateway_boundary.rs  handler.rs  http_handler.rs  http_mapping.rs  identity_recipient_resolver.rs  index.ts  keyring.rs  keyring.ts  lib.rs  local_keystore.rs  local_keystore_file.rs  local_proxy_live.rs  main.rs  manifest.rs  manifest_codec.rs  operations.rs  pipeline.rs  planner.rs  preflight.rs  recipient_keys.rs  references.rs  remote_gateway.rs  remote_gateway_http.rs  request_adapter.rs  request_context.rs  response_adapter.rs  router.rs  runtime.rs  s3_surface.rs  server.rs  service.rs  types.rs  (+1 more)
