[workspace]
members = [
  "common",
  "gateway",
  "chain-registry-pallet",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
# Required versions
subxt = { version = "0.50.0" }
axum = { version = "0.8.8" }
aes-gcm = { version = "0.10.3" }
tokio = { version = "1.50.0", features = ["full"] }
serde_json = { version = "1.0.149" }

# Shared support crates
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
bytes = "1"
thiserror = "2"
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10" # Added to fix the inheritance error
zeroize = { version = "1.8", features = ["zeroize_derive"] }
tracing = "0.1"

