[workspace.package]
license = "Apache-2.0"
authors = ["WILLFX"]
homepage = "https://github.com/WILLFX/swarm-s3-gateway"
repository = "https://github.com/WILLFX/swarm-s3-gateway"
edition = "2021"
version = "0.1.0"

[workspace]
members = [
  "common",
  "gateway",
  "chain-registry-pallet",
  "bin/runtime",
  "bin/node",
  "contracts/common",
  "contracts/s3_identity_contract",
  "contracts/s3_bucket_contract",
]
resolver = "2"

[workspace.dependencies]
common = { path = "./common", default-features = false }
chain-registry-pallet = { path = "./chain-registry-pallet", default-features = false }
s3-registry-runtime = { path = "./bin/runtime", default-features = false }

# Template-aligned SDK deps
clap = { version = "4.5.13" }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
scale-info = { version = "2.11.6", default-features = false }

frame-benchmarking = { version = "46.0.0", default-features = false }
frame-benchmarking-cli = { version = "54.0.0", default-features = false }
frame-executive = { version = "46.0.0", default-features = false }
frame-metadata-hash-extension = { version = "0.14.0", default-features = false }
frame-support = { version = "46.0.0", default-features = false }
frame-system = { version = "46.0.0", default-features = false }
frame-system-benchmarking = { version = "46.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "41.0.0", default-features = false }
frame-try-runtime = { version = "0.52.0", default-features = false }

pallet-aura = { version = "45.0.0", default-features = false }
pallet-balances = { version = "47.0.0", default-features = false }
pallet-contracts = { version = "46.0.0", default-features = false }
pallet-grandpa = { version = "46.0.0", default-features = false }
pallet-sudo = { version = "46.0.0", default-features = false }
pallet-timestamp = { version = "45.0.0", default-features = false }
pallet-transaction-payment = { version = "46.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "49.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "46.0.0", default-features = false }

sc-basic-authorship = { version = "0.54.0", default-features = false }
sc-cli = { version = "0.58.0", default-features = false }
sc-client-api = { version = "45.0.0", default-features = false }
sc-consensus = { version = "0.55.0", default-features = false }
sc-consensus-aura = { version = "0.56.0", default-features = false }
sc-consensus-grandpa = { version = "0.41.0", default-features = false }
sc-executor = { version = "0.48.0", default-features = false }
sc-network = { version = "0.56.0", default-features = false }
sc-network-types = { version = "0.20.2", default-features = true }
sc-offchain = { version = "51.0.0", default-features = false }
sc-service = { version = "0.57.0", default-features = false }
sc-telemetry = { version = "30.0.1", default-features = false }
sc-transaction-pool = { version = "45.0.0", default-features = false }
sc-transaction-pool-api = { version = "44.0.0", default-features = false }

sp-api = { version = "41.0.0", default-features = false }
sp-block-builder = { version = "41.0.0", default-features = false }
sp-blockchain = { version = "44.0.0", default-features = false }
sp-consensus-aura = { version = "0.47.0", default-features = false }
sp-consensus-grandpa = { version = "28.0.0", default-features = false }
sp-core = { version = "40.0.0", default-features = false }
sp-genesis-builder = { version = "0.22.0", default-features = false }
sp-inherents = { version = "41.0.0", default-features = false }
sp-io = { version = "45.0.0", default-features = false }
sp-keyring = { version = "46.0.0", default-features = false }
sp-offchain = { version = "41.0.0", default-features = false }
sp-runtime = { version = "46.0.0", default-features = false }
sp-session = { version = "43.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-storage = { version = "23.0.0", default-features = false }
sp-timestamp = { version = "41.0.0", default-features = false }
sp-transaction-pool = { version = "41.0.0", default-features = false }
sp-version = { version = "44.0.0", default-features = false }

substrate-build-script-utils = { version = "11.0.0", default-features = false }
substrate-frame-rpc-system = { version = "50.0.0", default-features = false }
substrate-wasm-builder = { version = "32.0.0", default-features = false }

# Gateway/app deps
subxt = { version = "0.50.0" }
axum = { version = "0.8.8" }
aes-gcm = { version = "0.10.3" }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.132", default-features = false }
async-trait = "0.1"
bytes = "1"
thiserror = "2"
anyhow = "1"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
sha3 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
tracing = "0.1"
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[patch.crates-io]
core2 = { git = "https://github.com/bbqsrc/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }








