[package]
name = "chain-registry-pallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

common = { path = "../common", default-features = false }

# Keep these aligned with your target chain SDK release.
frame-support = { version = "39", default-features = false }
frame-system = { version = "39", default-features = false }
sp-runtime = { version = "44", default-features = false }
sp-std = { version = "14", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "common/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
]
