[package]
name = "chain-registry-pallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }

common = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "common/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
]
