[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
sha2 = { workspace = true, default-features = false }
thiserror = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
  "serde/std",
  "sha2/std",
  "dep:thiserror",
]
