[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = [
  "dep:thiserror",
  "dep:serde_json",
  "serde/std",
]

[dependencies]
serde.workspace = true
hex.workspace = true
sha2.workspace = true

serde_json = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
