[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }

subxt.workspace = true
axum.workspace = true
aes-gcm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

async-trait.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hex.workspace = true
sha2.workspace = true
zeroize.workspace = true
tracing.workspace = true
hmac = "0.12"
parity-scale-codec = { version = "3", features = ["derive"] }
