[package]
name = "trustless-proxy"
version = "0.1.0"
edition = "2024"
publish = false
description = "Local S3-compatible Rust proxy for TrustlessPrivate buckets"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
common = { path = "../common" }
serde_json = "1"
anyhow = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
