[package]
name = "s3-contracts-common"
version = "0.1.0"
edition = "2021"

[lib]
name = "s3_contracts_common"
path = "src/lib.rs"

[dependencies]
ink = { version = "5.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
]
