[package]
autobins = false
name = "s3_bucket_contract"
version = "0.1.0"
edition = "2021"
authors = ["WILLFX"]
license = "Apache-2.0"

[lib]
name = "s3_bucket_contract"
path = "src/lib.rs"

[dependencies]
ink = { version = "5.0", default-features = false }
s3-contracts-common = { path = "../common", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
  "ink/std",
  "s3-contracts-common/std",
  "scale/std",
  "scale-info/std",
  "sp-core/std",
]
ink-as-dependency = []
